name:                hcoap
version:             0.1.0.0
synopsis:            Library for handling CoAP protocol
license:             BSD3
license-file:        LICENSE
author:              Ulf Lilleengen
maintainer:          ulf.lilleengen@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Network.CoAP
  other-modules:   Network.CoAP.Message, Network.CoAP.MessageCodec, Network.CoAP.Messaging,
                   Network.CoAP.Request, Network.CoAP.Response, Network.CoAP.Options,
                   Network.CoAP.Payload, Network.CoAP.Endpoint
  build-depends:       base,
                       bytestring,
                       binary,
                       network,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hcoap-example-server
  hs-source-dirs:      example-server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       network,
                       bytestring,
                       hcoap
  default-language:    Haskell2010
