name:                hcoap
version:             0.1.0.0
synopsis:            Library for handling CoAP protocol
license:             BSD3
license-file:        LICENSE
author:              Ulf Lilleengen
maintainer:          ulf.lilleengen@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Network.CoAP.Server, Network.CoAP.Client, Network.CoAP.Message
  other-modules: Network.CoAP.Types, Network.CoAP.MessageCodec, Network.CoAP.Messaging

  build-depends:       base,
                       bytestring,
                       binary,
                       network,
                       mtl
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hcoap-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    base,
                    hcoap,
                    QuickCheck,
                    HUnit,
                    bytestring
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

executable hcoap-example-server
  hs-source-dirs:      example-server
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       network,
                       bytestring,
                       hcoap
  default-language:    Haskell2010

executable hcoap-example-client
  hs-source-dirs:      example-client
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       network,
                       bytestring,
                       hcoap
  default-language:    Haskell2010
